{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 815,
  "lineage": "744acf36-8d66-7ee4-2634-e4646a0acaf3",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418464140:vpc/vpc-041e5955419ca0eb3",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0cb77378d56057d1a",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-00a74e0cc20e784d4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-041e5955419ca0eb3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-047feb893991f6cc0",
            "owner_id": "905418464140"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418464140:vpc/vpc-041e5955419ca0eb3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-08eb855b50555c853",
            "default_route_table_id": "rtb-047feb893991f6cc0",
            "default_security_group_id": "sg-05c524c01bbf195b9",
            "dhcp_options_id": "dopt-00a74e0cc20e784d4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-041e5955419ca0eb3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-047feb893991f6cc0",
            "owner_id": "905418464140"
          }
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418464140:security-group/sg-08cde535b4db2f293",
            "description": "Allow connection to mysql db",
            "egress": [],
            "id": "sg-08cde535b4db2f293",
            "ingress": [],
            "name": "project-env-rds-sg",
            "name_prefix": "",
            "owner_id": "905418464140",
            "revoke_rules_on_delete": false,
            "tags": {
              "Resource": "security-group",
              "Service": "rds"
            },
            "tags_all": {
              "Resource": "security-group",
              "Service": "rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-041e5955419ca0eb3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418464140:security-group-rule/sgr-0ede65ffbd634f2ed",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0ede65ffbd634f2ed",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-08cde535b4db2f293",
            "security_group_rule_id": "sgr-0ede65ffbd634f2ed",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.this",
            "module.rds.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418464140:security-group-rule/sgr-0a567fba660d54d55",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow inbound traffic to mysql db",
            "from_port": 3306,
            "id": "sgr-0a567fba660d54d55",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-08cde535b4db2f293",
            "security_group_rule_id": "sgr-0a567fba660d54d55",
            "tags": {
              "Resource": "sgi-rule",
              "Service": "rds"
            },
            "tags_all": {
              "Resource": "sgi-rule",
              "Service": "rds"
            },
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.this",
            "module.rds.aws_security_group.this"
          ]
        }
      ]
    }
  ]
}